--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^7.0.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-select": "^5.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
