--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
-    "react-select": "^5.10.0"
+    "react-select": "^5.10.0",
+    "yocto-queue": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
