--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/material": "^6.4.5",
     "cra-template": "1.2.0",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
